# src/Store/Web/Client/OpenAPIs/swagger.yaml
@@ -436,6 +436,10 @@ components:
           format: int64
         name:
           type: string
+        category:
+          nullable: true
+          oneOf:
+          - $ref: '#/components/schemas/ProductCategoryDto'
         image:
           type: string
           nullable: true
@@ -450,6 +454,48 @@ components:
           nullable: true
         handle:
           type: string
+    ProductCategoryDto:
+      type: object
+      additionalProperties: false
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        description:
+          type: string
+        handle:
+          type: string
+        path:
+          type: string
+        parent:
+          nullable: true
+          oneOf:
+          - $ref: '#/components/schemas/ProductCategoryParent'
+        productsCount:
+          type: integer
+          format: int64
+    ProductCategoryParent:
+      type: object
+      additionalProperties: false
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        handle:
+          type: string
+        path:
+          type: string
+        parent:
+          nullable: true
+          oneOf:
+          - $ref: '#/components/schemas/ProductCategoryParent'
+        productsCount:
+          type: integer
+          format: int64
     ProductCategoryTreeRootDto:
       type: object
       additionalProperties: false
@@ -480,7 +526,7 @@ components:
         parent:
           nullable: true
           oneOf:
-          - $ref: '#/components/schemas/ParentProductCategoryDto'
+          - $ref: '#/components/schemas/ProductCategoryParent'
         subCategories:
           type: array
           items:
@@ -490,48 +536,6 @@ components:
           format: int64
         canAddProducts:
           type: boolean
-    ParentProductCategoryDto:
-      type: object
-      additionalProperties: false
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-        handle:
-          type: string
-        path:
-          type: string
-        parent:
-          nullable: true
-          oneOf:
-          - $ref: '#/components/schemas/ParentProductCategoryDto'
-        productsCount:
-          type: integer
-          format: int64
-    ProductCategoryDto:
-      type: object
-      additionalProperties: false
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-        description:
-          type: string
-        handle:
-          type: string
-        path:
-          type: string
-        parent:
-          nullable: true
-          oneOf:
-          - $ref: '#/components/schemas/ParentProductCategoryDto'
-        productsCount:
-          type: integer
-          format: int64
     Cart:
       type: object
       additionalProperties: false
